--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "chenweather": "^2.0.2",
     "element-ui": "^1.4.4",
     "extend": "^3.0.1",
     "vue": "^2.4.2"
